Archive2/52/02fa9eead713d3/output
In file included from /usr/local/include/boost/fusion/iterator/detail/segmented_iterator.hpp:15:0,
                 from /usr/local/include/boost/fusion/iterator/segmented_iterator.hpp:10,
                 from /usr/local/include/boost/fusion/sequence/intrinsic/detail/segmented_end.hpp:11,
                 from /usr/local/include/boost/fusion/sequence/intrinsic/end.hpp:17,
                 from /usr/local/include/boost/fusion/mpl/back.hpp:11,
                 from /usr/local/include/boost/fusion/mpl.hpp:15,
                 from /usr/local/include/boost/fusion/view/detail/strictest_traversal.hpp:15,
                 from /usr/local/include/boost/fusion/view/transform_view/transform_view.hpp:20,
                 from /usr/local/include/boost/fusion/algorithm/transformation/transform.hpp:10,
                 from main.cpp:9:
/usr/local/include/boost/fusion/iterator/key_of.hpp: In instantiation of 'struct boost::fusion::result_of::key_of<boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 1>, implementation::metafunc_to_fusion_result<implementation::to_vector> > >':
main.cpp:155:13:   recursively required from 'struct implementation::to_fusion_map_iter<boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 1>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 2>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, mpl_::bool_<false> >'
main.cpp:155:13:   required from 'struct implementation::to_fusion_map_iter<boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 0>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 2>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, mpl_::bool_<false> >'
main.cpp:177:13:   required from 'struct implementation::as_fusion_map<boost::fusion::transform_view<boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, implementation::metafunc_to_fusion_result<implementation::to_vector>, boost::fusion::void_> >'
main.cpp:186:132:   required from 'class implementation::scattered_vector<boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> > >'
main.cpp:284:19:   required from here
/usr/local/include/boost/fusion/iterator/key_of.hpp:35:16: error: invalid use of incomplete type 'struct boost::fusion::extension::key_of_impl<boost::fusion::transform_view_iterator_tag>'
         struct key_of
                ^
/usr/local/include/boost/fusion/iterator/key_of.hpp:20:16: error: declaration of 'struct boost::fusion::extension::key_of_impl<boost::fusion::transform_view_iterator_tag>'
         struct key_of_impl;
                ^
main.cpp: In instantiation of 'struct implementation::to_fusion_map_iter<boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 1>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 2>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, mpl_::bool_<false> >':
main.cpp:155:13:   required from 'struct implementation::to_fusion_map_iter<boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 0>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 2>, implementation::metafunc_to_fusion_result<implementation::to_vector> >, mpl_::bool_<false> >'
main.cpp:177:13:   required from 'struct implementation::as_fusion_map<boost::fusion::transform_view<boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, implementation::metafunc_to_fusion_result<implementation::to_vector>, boost::fusion::void_> >'
main.cpp:186:132:   required from 'class implementation::scattered_vector<boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> > >'
main.cpp:284:19:   required from here
main.cpp:155:13: error: no type named 'type' in 'struct boost::fusion::result_of::key_of<boost::fusion::transform_view_iterator<boost::fusion::basic_iterator<boost::fusion::map_iterator_tag, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >::category, boost::fusion::map<boost::fusion::pair<ScatteredRecordTags::name, std::basic_string<char> >, boost::fusion::pair<ScatteredRecordTags::age, int> >, 1>, implementation::metafunc_to_fusion_result<implementation::to_vector> > >'
     >::type type;
             ^
